name:                pgn-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eozd/pgn-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Esref Ozdemir
maintainer:          esref.ozdemir27@gmail.com
copyright:           2018 Esref Ozdemir
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pgn-parser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
