name:                pgn-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eozd/pgn-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Esref Ozdemir
maintainer:          esref.ozdemir27@gmail.com
copyright:           2018 Esref Ozdemir
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     PgnParser
                     , PgnParserTypes
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite tests
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -fwarn-tabs
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , pgn-parser
                     , QuickCheck
                     , hspec
